--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "gatsby": "^3.13.0",
+    "gatsby-core-utils": "^2.13.0",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-feed": "^3.13.0",
     "gatsby-plugin-google-analytics": "^3.13.0",
     "gatsby-plugin-image": "^1.13.0",
